--- a/.github/workflows/scala.yml
+++ b/.github/workflows/scala.yml
@@ -2,23 +2,25 @@ name: Scala CI
 
 on:
   push:
-    branches: [ master ]
+    branches:
+      - master
+      - pekko-migration
   pull_request:
-    branches: [ master ]
+    branches:
+      - master
+      - pekko-migration
   schedule:
     - cron: '0 8 * * *'
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
-
     steps:
     - uses: actions/checkout@v2
-    - name: Set up JDK 11
+    - name: Set up JDK 17
       uses: actions/setup-java@v2
       with:
-        java-version: '11'
+        java-version: '17'
         distribution: 'adopt'
     - name: Run tests
       run: sbt test
